[tool.poetry]
name = "passpilot"
version = "0.1.0"
description = ""
authors = ["Juni May <juni_may@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.12.0"
toml = "^0.10.2"
zhipuai = "^1.0.7"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
